--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <div class="root"></div>
 
   </body>
